
* <fixcrlf> would fail for files that contained lines longer than 8kB.

* Some junit formatters incorrectly assumed that all testcases would
  inherit from junit.framework.TestCase.

Other changes:
--------------
* Unjar, Untar, Unwar and Unzip now support patternsets to 
  select files from an archive for extraction.  Filesets may be 
  used to select archived files for unarchival.

* Javac task allows debug levels to be spcified.  Debug levels
  will have an effect only when the modern compiler is used.

* Mail task allows specification of port number.

* Added support for specifying CVS_RSH in the <cvs/> task

* New tasks bzip2 and bunzip2 to pack and unpack files using the 
  BZip2 alogrithm, replaceregexp, checksum, translate

* The attributes zipfile, jarfile, warfile and earfile (from the Zip, 
  Jar, War and Ear tasks) have been deprecated and superseded by a 
  new attribute "file".

* Added a new condition <isset> that test for the existence of a
  property to the condition task.

* Added a new condition <checksum>.

* Ant's testcases require JUnit 3.7 or above as they now use the new
  assertTrue method instead of assert.

* <taskdef> and <typedef> will now emit a warning if a task/type of
  the given name already exists.

* A new revision of VAJ tasks: The most important new feature
  is the ability to execute VAJ tasks from the command line by
  exploiting the Remote Tool Access feature of VAJ.

* Improved support for Novell NetWare.

* Added an optional encoding attribute to <fixcrlf>

* <apply> has a new attribute relative that allows users to pass the
  filenames as relative instead of absolute paths on the command line.

Changes from Ant 1.4 to Ant 1.4.1
===========================================

Fixed bugs:
-----------

* <ant>'s antfile attribute will now also be considered an absolute path on
  Windows systems, if it starts with a \ and no drive specifier.
 
* The fullpath attribute of <zipfileset> has been ignored if you used